--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     </a>
 
     <script src="./storage.js"></script>
+    <script src="./dataManager.js"></script>
     <script src="./index.js"></script>
 </body>
 </html>
